reports/python.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.9/3.9.5/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
<b> This is the fourth cell.</b>

This is also a markdown cell.

LaTex is used to show mathematical expressions, formulas, etc. 

For example, $ x^2 + y ^ 2 = \frac{4}{9} $, $ \sum_{i=1}^n (i+2)^{3} $, or $ \left( \begin{array}{rr}  1 & 0 & -1 \\ 2 & -2 & 0 \\ 3 & -1 & -2  \end{array} \right) $.

<i>By double clicking on this cell, you can see the code.</i> <br> 
<u>By executing/running this cell, you can see the result content.</u>
------------------

[0;36m  File [0;32m"<ipython-input-2-54ece157ac7e>"[0;36m, line [0;32m1[0m
[0;31m    <b> This is the fourth cell.</b>[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-54ece157ac7e>, line 1)

